--- a/code/supplemental_v2.Rmd
+++ b/code/supplemental_v2.Rmd
@@ -16,7 +16,8 @@ suppressPackageStartupMessages(c(
   library(flextable),
   library(knitr),
   library(kableExtra),
-  library(xlsx)
+  library(xlsx),
+  library(patchwork)
 ))
 ```
 
@@ -249,119 +250,139 @@ legend("top", inset = c(0), legend=n, bty = "n", horiz = T, cex = 1.2)
 
 \newpage 
 
-```{r supplemental-table-st1-data-generation, eval = FALSE}
-load("../data/gdc_tumor_coding_complete.Rdata")
-load("../data/gdc_reactome_path_analysis.Rda")
-load("../data/gene2_level2_lookup.Rda")
-load("../data/pathname2level2.Rda")
-load("../data/gene_data.Rda")
-load("../data/gdc_gene_exp_adj.Rda")
 
-## Parameters ##
-n_path <- 377 ## how many top pathways do you want to see. 1 = top path, 2 = top path and second most
-mutated_gene_position <- c(1,2,3) ## what gene do you want to see. 1 = top gene, 2 = second most, 3 = third
-show_perc <- TRUE ## show perc for mutated gene
+```{r supplemental-s5-plot-data, eval = FALSE}
+## Calculate error distribution
 
-
-toppath <- gdc_reactome_path_analysis %>% rowSums() %>% as.data.frame() %>% rownames_to_column(var = "path_name") %>% arrange(desc(.)) %>% .[1:n_path,] %>% .[, "path_name"] ## getting the top mutated pathways
-
-id_to_names <- gene2level2_lookup %>% rownames_to_column(var = "ensembl_gene_id") %>% ## convert ensembl to gene name
-  left_join(., gene_data[,c("ensembl_gene_id", "external_gene_name")], by = "ensembl_gene_id") %>%
-  remove_rownames() %>% column_to_rownames(var = "external_gene_name") %>%
-  dplyr::select(-ensembl_gene_id) %>%
-  t() %>% as.data.frame() %>% rownames_to_column(var = "PATH_ID") %>% ## convert path_id to path_name
-  left_join(., pathname2level2, by = "PATH_ID") %>%
-  remove_rownames() %>% column_to_rownames(var = "PATH_NAME") %>%
-  dplyr::select(-PATH_ID) %>%
-  t() %>% as.data.frame()
-
-gene_mutation <- gdc_gene_exp_adj %>% rownames_to_column(var = "ensembl_gene_id") %>% ## convert ensembl to gene name
-  left_join(., gene_data[,c("ensembl_gene_id", "external_gene_name")], by = "ensembl_gene_id") %>%
-  remove_rownames() %>% column_to_rownames(var = "external_gene_name") %>%
-  dplyr::select(-ensembl_gene_id)
-
-table_st1 <- list() ## list for forloop 
-
-for(n in toppath) {
-  message(n)
-  ## finding top mutated gene in pathway
-  gene_in_path <- id_to_names %>% .[,which(names(.) == n)] %>% as.data.frame() %>% ## select pathway
-    'rownames<-' (rownames(id_to_names)) %>% 
-    filter(. == 1) %>% ## filter for genes that are in that pathway
-    rownames(.)
-  top_mut_gene <- gene_mutation %>% .[rownames(.) %in% gene_in_path, ] %>% ## only include genes in paths
-      rowSums() %>% as.data.frame() %>% 'colnames<-' ("obs_count") %>% ## sum the pathway mutation
-    rownames_to_column(var = "gene") %>%
-      mutate(n_sample = length(gene_mutation),
-             perc_mut = round((obs_count / length(gene_mutation)) * 100, digits = 1)) %>% 
-       arrange(desc(obs_count))
-  top_gene_in_path <- list()
-  for(p in mutated_gene_position) {
-    message(p)
-    if(show_perc == TRUE) {
-    top_gene_in_path[[p]] <- paste0(top_mut_gene$gene[p], " (", top_mut_gene$perc_mut[p],"%)")  
-    }
-    if(show_perc == FALSE) {
-    top_gene_in_path[[p]] <- paste0(top_mut_gene$gene[p])  
-    }
+## break error into bins for entropy calculation
+## Set number of bins - 1024 bins
+binsize <- 1024 - 2 ## -2 bins for the less than -3650 and greater than 3650 values
+evaluebreak <- c(-1e10,seq(from = -3650.00, to = 3650.00, by = 3650*2/binsize), 1e10)
+elabel <- list()
+counter <- 2
+for(i in evaluebreak[c(-1,-(length(evaluebreak)-1))]) {
+  if(i == -1e10) {
+    elabel[[counter]] <- paste0(i, "+")
+  } else if(i == 1e10) {
+    elabel[[counter]] <- paste0(i, "+")
+  } else {
+    elabel[[counter]] <- paste0(i, "-", round(evaluebreak[[counter+1]], digits = 2))
   }
-  top_gene_in_path <- top_gene_in_path %>% do.call(rbind, .) %>% as.data.frame() %>% ## rbind list
-   'rownames<-' (mutated_gene_position) %>% t() %>% as.data.frame()
-  ## calculating the percent mutated samples
-  spec_path <- data.frame(Pathway = n,
-                          Percent_Mutated = round(gdc_reactome_path_analysis %>% .[n,] %>% sum() / length(gdc_reactome_path_analysis) * 100, digits = 1))
-  table_st1[[n]] <- cbind(spec_path, top_gene_in_path)
+  counter <- counter + 1
 }
-table_st1 <- as.data.frame(do.call(rbind, table_st1))
-save(table_st1, file = "../data/table_st1.Rda")  
-rm(list = ls(all.names = T))  
-gc()
+elabel <- as.character(elabel)
+elabel[1] <- "-3650+"
+elabel[1024] <- "3650+"
+
+load("../data/deadpat_all.rda")
+deadpat <- deadpat %>% rownames_to_column(var = "stanid")
+## convert negative tdeath to 0
+deadpat[which(deadpat$tevent < 0), "tevent"] <- 0
+model <- c("knn", "icluster", "coca", "tis")
+tdeath.error <- list() ## store error values
+entropy <- list() 
+for(n in model) {
+  ## Load correct model
+  if(n == "knn") {
+    load("./survival/survmodel_effcl_knn_062821.stansave")
+  } else if(n == "icluster") {
+    load("./survival/survmodel_effcl_icluster_062821.stansave")
+  } else if (n == "coca") {
+    load("./survival/survmodel_effcl_coca_062821.stansave")
+  } else if (n == "tis") {
+    load("./survival/survmodel_effcl_tis_062821.stansave")
+  } else {
+    print("Model does not exist")
+  }
+  ## Extract tdeath for "adeath" indivduals
+  tdeath <- samps %>% as.data.frame(.) %>% .[, grep(pattern = "tdeath", x = names(.))]
+  names(tdeath) <- gsub("tdeath\\[(.*)\\]","\\1", names(tdeath)) ## update colname with stanid
+  tdeath <- tdeath %>% gather(data = ., key = "stanid", value = "predicted") %>%
+    left_join(x = ., y = deadpat[,c("stanid", "tevent", "eventtype")], by = "stanid") %>%
+    dplyr::filter(eventtype == "adeath")
+  ## Calculate error for each sample
+  tdeath$error <- tdeath$predicted - tdeath$tevent
+  tdeath.error[[n]] <- tdeath$error
+  ## Split error data into bins and tally up 
+  tdeath <- tdeath %>% mutate(ebin = cut(x = error,
+                                         breaks = evaluebreak,
+                                         right = T,
+                                         labels = elabel))
+  eprob <- as.data.frame(table(tdeath$ebin))
+  eprob <- eprob %>% dplyr::filter(Freq > 0) %>%
+    mutate(prob = Freq / nrow(tdeath))
+  ## Entropy calculation
+  entropy[[n]] <- round(-sum(eprob$prob*log(eprob$prob))/log(2), digit = 3)
+}
+knn <- data.frame(error = tdeath.error$knn,
+                  model = "knn")
+icluster <- data.frame(error = tdeath.error$icluster,
+                       model = "icluster")
+coca <- data.frame(error = tdeath.error$coca,
+                   model = "coca")
+tis <- data.frame(error = tdeath.error$tis,
+                   model = "tis")
+tdeath.error <- rbind(knn, icluster, coca, tis); rm(knn, icluster, coca, tis); gc()
+
+
+## empirical cumulative distribution function
+## Model selection
+model <- c("knn", "icluster", "coca", "tis")
+
+for(n in model) {
+   ## Load correct model
+  if(n == "knn") {
+    load("./survival/survmodel_effcl_knn_062821.stansave")
+  } else if(n == "icluster") {
+    load("./survival/survmodel_effcl_icluster_062821.stansave")
+  } else if (n == "coca") {
+    load("./survival/survmodel_effcl_coca_062821.stansave")
+  } else if (n == "tis") {
+    load("./survival/survmodel_effcl_tis_062821.stansave")
+  }
+  else {
+    print("Model does not exist")
+  }
+  dfs <- as.data.frame(samps) %>% 
+    select(starts_with("tdeath[")) %>%
+    stack(.) %>%
+    'colnames<-' (c("tdeath", "stanid")) %>%
+    .[sample(x = nrow(.), size = 1e5),]
+  assign(x = n, value = dfs)
+}
+
+save(entropy, tdeath.error, knn, icluster, coca, tis, file = "../data/s5_plot.rda")
 ```
 
-```{r supplemental-table-st1, eval = FALSE}
-load("../data/table_st1.Rda")
-## for html only
-# table_st1 %>% dplyr::select(-Pathway) %>% knitr::kable() %>%
-#   kable_styling(bootstrap_options = c("striped", "hover", "condensed"), full_width = FALSE, font_size = 12) %>%
-#   column_spec(1, bold = T, color = "black")
+```{r supplemental-s5-plot, fig.width=9}
+load("../data/s5_plot.rda")
+load("../data/deadpat_all.rda")
 
-## for word doc
-# table_st1 %>% flextable() %>% 
-#   set_caption(caption = "") %>%
-#   align(part = "all") %>% 
-#   width(., width = c(4,0.5,0.5,0.5,0.5)) %>% 
-#   fontsize(size = 8, part = "body")
+s5.1 <- ggplot(knn) + stat_ecdf(aes(x=tdeath),color="#00BFC4", size = 1) + 
+  stat_ecdf(aes(x=tevent),data=subset(deadpat,eventtype=="adeath"),col="#00BA38", size = 1) +
+  stat_ecdf(aes(x=tdeath),data=icluster, color="#7CAE00", size = 1) + 
+  stat_ecdf(aes(x=tdeath),data=coca, color="#F8766D", size = 1) + 
+  stat_ecdf(aes(x=tdeath),data=tis, color="#F564E3", size = 1) + 
+  coord_cartesian(xlim=c(0,365*5)) + 
+  labs(x = "Survival Time (years past diagnosis)", y = "Fn(Survival Time)") +
+  annotate(geom = "text", x = 250, y = 0.5, label = "Actual Death", color = "#00BA38", size = 3) +
+  theme_minimal()
+
+s5.2 <- ggplot(data = tdeath.error, aes(x = error, group = model, fill = model)) +
+  geom_density(alpha = 0.5) +
+  theme_minimal() +
+  scale_x_continuous(breaks=seq(-4000, 4000, by = 2000), limits = c(-3650,3650)) +
+  labs(x = "Error (Predicted - Actual)", y = "Density")#, 
+       #subtitle = paste0("Entropy - knn: ", entropy$knn, " ; icluster: ", entropy$icluster, "\ncoca: ", entropy$coca, " ; tis: ", entropy$tis))
+
+
+
+layout = "
+AABB
+AABB
+"
+
+s5.1 + s5.2 + plot_annotation(tag_levels = "A") + plot_layout(design = layout)
 ```
 
-```{r st2, fig.width= 9, eval = FALSE}
-##**Supplementary Table 2. Cluster-specific enriched pathways (effect size >= 0.30).**
-## docx friendly
-load("../data/moderate_enrich_prob.Rda")
-
-table_st2 <- moderate_enrich_prob %>% filter(difference >= 0.30 & signif <= 2500) %>% ## filter effect size >= 0.20 and enrichment at a 95% CI
-  dplyr::select(path, clust, signif, difference) %>% 'colnames<-' (c("Pathway", "Cluster", "Signif", "Enrichment_Score")) ## select relevant column and rename col
-
-table_st2$log10pvalue <- round(-log10((table_st2$Signif + 1) / 1E5), digits = 2) ## Getting p value ## adding 1 for pseudo count.. 1E5 is the n simulations performed
-table_st2$Enrichment_Score <- round(table_st2$Enrichment_Score, digits = 2)
-table_st2$Signif <- NULL ## we don't need this anymore
-
-# st1 <- st1 %>% flextable() %>% 
-#   set_caption(caption = "") %>%
-#   align(part = "all") %>% 
-#   width(., width = c(4,0.75,1,1)) %>% 
-#   fontsize(size = 10, part = "body")
-# 
-
-# names(st1) <- c("Pathway", "Cluster", "Effect Size", "-log(p)")
-#  st1 %>%  knitr::kable(format = "latex", longtable = TRUE, align = c("l", rep("c",3))) %>%
-#    kable_styling(latex_options=c("scale_down", "repeat_header"), full_width = FALSE, font_size = 12) %>%
-#    column_spec(1, color = "black", width = "4in")
-
-## Saving st1 and st2 in excel
-
-write.xlsx(table_st1, file="supplemental.table.xlsx", sheetName="ST1", row.names=FALSE)
-write.xlsx(table_st2, file="supplemental.table.xlsx", sheetName="ST2", append=TRUE, row.names=FALSE)
-```
-
-
-
+**S5 Fig. Performance comparison of different classification model - knn, COCA, iCluster, tissue-of-origin (tis).** A) Empirical cumulative distribution function comparing time of death prediction of all classification models with actual time of death (dark green). B) Error distribution plot of predicted and actual time of death.
