--- a/text/references.bib
+++ b/text/references.bib
@@ -652,3 +652,36 @@ Fitzgerald, R.C. and Scaffidi, P. and The Oesophageal Cancer Clinical and Molecu
   pages = {106--114},
   doi = {doi:10.1038/ng.3168}
 }
+
+@article{Creixell-pathwaynetworkanalysis,
+  author = {Creixell, P. and Reimand, J. and Haider, S. and Wu, G. and Shibata, T. and Vazquez, M. and Mustonen, V. and Gonzalez-Perez, A. and Pearson, J. and Sander, C. and Raphael, B. and Marks, D. and Ouellete, F. and Valencia, A. and Bader, G. and Boutros, P. and Stuart, J. and Linding, R. and Lopez-Bigas, N. and Stein, L.},
+  title = {Pathway and network analysis of cancer genomes},
+  journal = {Nature Methods},
+  year = {2015},
+  volume = {12},
+  number = {7},
+  pmid = {26125594},
+  doi = {10.1038/nmeth.3440}
+}
+  
+@Inbook{Bhattacharjee2014,
+  author = {Bhattacharjee, P. and Mazumdar, M. and Guha, D. and Sa, G.},
+  title = {Ubiquitin--Proteasome System in the Hallmarks of Cancer},
+  bookTitle = "Role of Proteases in Cellular Dysfunction",
+  year = {2014},
+  publisher = {Springer New York},
+  address = {New York, NY},
+  isbn = {978-1-4614-9099-9},
+  doi = {10.1007/978-1-4614-9099-9_9}
+}
+
+@article{kampen2019,
+    author = {Kampen, K. and Sulima, S. and Vereecke, S. and De Keersmaecker, K.},
+    title = "{Hallmarks of ribosomopathies}",
+    journal = {Nucleic Acids Research},
+    year = {2019},
+    volume = {48},
+    number = {3},
+    pmid = {31350888},
+    doi = {10.1093/nar/gkz637},
+}
